# prefect-deployments-toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  detect-and-tag-new-version.yml
src/prefect_deployments_toolkit/: __main__.py  deployment.py  deployment_loader.py  get_modified_deployments.py  log_buffer.py  prefect_api.py  prefect_cli.py  prefect_rest.py  yaml_utils.py
tests/unit/: test_deployment.py  test_deployment_loader.py  test_get_modified_deployments.py  test_log_buffer.py  test_prefect_cli.py  test_prefect_rest.py  test_yaml_utils.py
