[project]
name = "prefect-deployments-toolkit"
version = "0.0.8"
description = "CLI toolkit for detecting and applying Prefect deployment changes in CI/CD pipelines"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.10"
authors = [
    { name = "Karol Wolski", email = "kwolski@dyvenia.com" }
]
keywords = ["prefect", "deployment", "ci-cd", "gitlab-ci", "workflow-orchestration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "prefect>=3.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "coverage>=7",
]

[project.urls]
Repository = "https://github.com/dyvenia/prefect-deployments-toolkit"
Issues = "https://github.com/dyvenia/prefect-deployments-toolkit/issues"

[project.scripts]
prefect-deployments-toolkit = "prefect_deployments_toolkit.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_deployments_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
